[package]
name = "gcp-lookup"
version = "0.1.0"
authors = ["Kenec <nnamani.kenechukwu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
env_logger = "0.8.3"
log = "0.4"